# larics_motion_planning

./: .gitignore  BallisticAirdropPaper.md  CMakeLists.txt  Doxyfile  README.md  Reminder.md  package.xml
config/: bebop_config.yaml  camellia_city_parabolic_airdrop.yaml  cooperative_transport_uav_wp_manipulator.yaml  danieli_uav_config.yaml  global_planner_config_example.yaml  husky_config.yaml  model_correction_config_example.yaml  multiple_manipulators_uavwpman_uavwpman3rx.yaml  neo_parabolic_airdrop.yaml  octomap_config_example.yaml  office_parabolic_airdrop.yaml  one_file_config_example.yaml  path_planner_config_example.yaml  pioneer_config.yaml  red_parabolic_airdrop.yaml  state_validity_checker_config_example.yaml  toppra_config_example.yaml  uav_and_husky.yaml  uav_and_wp_manipulator_3r_config.yaml  uav_and_wp_manipulator_3rx_additional_dof_config.yaml  uav_and_wp_manipulator_3rx_config.yaml  uav_and_wp_manipulator_config.yaml  uav_only_config_example.yaml  uav_wp_manipulator_5r_husky_schunk.yaml  wp_manipulator_kinematics.yaml
config/airdrop_configs/: airdrop_configs.csv  airdrop_configs_fast.csv  airdrop_configs_for_paper.csv  airdrop_configs_for_paper_small.csv  airdrop_configs_office.csv  airdrop_configs_paper_revision.csv  airdrop_configs_rev.csv  airdrop_configs_slow.csv  camellia_city_building.csv  fire_extinguishing_parabola_config.csv  office_bucket.csv  office_multiple_targets.csv  red_repeatability_configs.csv  red_repeatability_configs2.csv
config/asap/: arducopter_asap_manipulator_4r.yaml
config/greenhouse/: greenhouse_box_centroids.csv
config/multiple_manipulators/: model_two_uavs_and_wp_manipulators.yaml  model_uavwpman_uavwpman3rx.yaml  two_uavs_and_wp_manipulators.yaml
config/plot_juggler/: parabolic_airdrop_plot_juggler.xml  uav_pid_plotjuggler.xml
config/tmuxinator_sessions/: impedance_bridge.yml  impedance_model.yml
include/: GlobalPlanner.h  GlobalPlannerRosInterface.h  MapInterface.h  OctomapMap.h  PathPlanningInterface.h  PointStateValidityChecker.h  RrtPathPlanner.h  StateValidityCheckerInterface.h  ToppraTrajectory.h  TrajectoryInterface.h  UavWpManipulatorStateValidityChecker.h  Visualization.h
launch/: arducopter_asap_manipulator_4r.launch  arducopter_wp_manipulator.launch  arducopter_wp_manipulator_3rx.launch  arducopter_wp_manipulator_tryout.launch  camellia_city_parabolic_airdrop.launch  cooperative_transport_arducopter_wp_manipulator.launch  danieli_uav.launch  global_planner.launch  hawk_asap_manipulator_model_sim.launch  hawk_asap_manipulator_sim.launch  husky.launch  kopterworx_asap_manipulator_4r.launch  mario_trajectory_go_to.launch  mrs_paper_arducopter_wp_manipulator.launch  multiple_manipulators_uavwpman_uavwpman3rx.launch  neo_parabolic_airdrop.launch  neo_trajectory_go_to.launch  octomap_server_cartographer.launch  office_parabolic_airdrop.launch  parabolic_airdrop.launch  pioneer_global_planner.launch  red_parabolic_airdrop.launch  red_parabolic_airdrop_with_map.launch  red_simulation.launch  uav_and_husky_global_planner.launch  uav_global_planner.launch  uav_wp_manipulator_5r_husky_schunk_global_planner.launch
matlab_models/arducopter/: arducopter.slx  (+3 more)
resources/: HawkAsapManipulator4rSim.xml  UavAsapManipulator4rSim.xml  schematic_impedance_uav_wp_manipulator_3rx.xml
scripts/: aerial_manipulator_state_recorder.py  cooperative_transport_two_uavs_handler.py  cpu_load_monitor.py  execute_multiple_parabolic_airdrops.sh  execute_multiple_parabolic_airdrops_from_file.py  execute_multiple_parabolic_airdrops_to_different_targets.py  gazebo_trajectory_teleport.py  go_to_reference.py  icuas22_competition_magnet.ino  impedance_joint_trajectory_handler.py  joint_trajectory_dequeue.py  joint_trajectory_point_to_arducopter_and_manipulator.py  joint_trajectory_point_to_kopterworx_and_manipulator.py  joint_trajectory_reference_tracker.py  joint_trajectory_to_arducopter_and_husky.py  joint_trajectory_to_multi_dof_trajectory.py  joint_trajectory_to_multi_dof_trajectory_point.py  joint_trajectory_to_neo.py  joint_trajectory_to_neo_and_manipulator_3r.py  joint_trajectory_to_neo_and_wp_manipulator_3r.py  joint_trajectory_to_neo_and_wp_manipulator_3r_through_service.py  joint_trajectory_to_pose_stamped.py  joint_trajectory_to_uav_and_asap_manipulator_4r_through_service.py  joint_trajectory_to_uav_and_wp_manipulator_3rx_through_service.py  joint_trajectory_to_uav_and_wp_manipulator_through_service.py  joint_trajectory_with_airdrop_to_kopterworx.py  joint_trajectory_with_airdrop_to_neo.py  magnet_gain_to_serial_io.py  model_trajectory_to_impedance.py  multi_dof_joint_trajectory_point_to_pose.py  parabola_info_vector_to_path.py  parabolic_airdrop_dequeue.py  red_plan_airdrop_from_current_reference.py  rosbag_topic_size.py  rosserial_magnet.ino  serial_io.py  spawn_ball_at_uav.py  tent_rviz_setting.py  uav_exploration_state_machine.py  uav_trajectory_go_to.py  (+1 more)
src/: BallStateValidityChecker.cpp  GlobalPlanner.cpp  GlobalPlannerRosInterface.cpp  KinematicsInterface.cpp  LocalPlanner.cpp  MapInterface.cpp  MultipleManipulatorsKinematics.cpp  MultipleManipulatorsModelCorrection.cpp  MultipleManipulatorsStateValidityChecker.cpp  OctomapMap.cpp  ParabolicAirdropPlanner.cpp  ParabolicAirdropTrajectory.cpp  PathPlanningInterface.cpp  PointStateValidityChecker.cpp  RrtPathPlanner.cpp  SimpleStateValidityCheckers.cpp  SplineInterpolator.cpp  StateValidityCheckerInterface.cpp  ToppraTrajectory.cpp  TrajectoryInterface.cpp  UavWpManipulatorModelCorrection.cpp  UavWpManipulatorStateValidityChecker.cpp  Visualization.cpp  WpManipulatorKinematics.cpp  binvox2bt.cpp  end_effector_configuration_node.cpp  global_planner_node.cpp  local_planner_node.cpp  test.cpp
srv/: CartesianTrajectory.srv  CheckStateValidity.srv  GetPlantBoxInspectionPoints.srv  MultiDofTrajectory.srv  ParabolicAirdropTrajectory.srv  SaveOctomap.srv  VisualizeState.srv
startup/: cooperative_transport_uav.yml  ct_wp_wp3rx.yaml  greenhouse_uav_mrs.yml  greenhouse_uav_mrs_rviz.rviz  impedance_asap_bridge.yml  impedance_bridge.yml  impedance_model.yml  uav_wp_manipulator_model.yaml
(+124 files in other folders)
